src/objects/ExternalService__c.object
<CustomObject>
    <fields>
        <fullName>ReplayID__c</fullName>
        <description>ReplayID from ExternalServiceOutbound__e Request</description>
        <inlineHelpText>ReplayID from ExternalServiceOutbound__e Request</inlineHelpText>
        <label>Replay ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestPayload__c</fullName>
        <description>JSON representation of the Request to External Service</description>
        <inlineHelpText>JSON representation of the Request to External Service</inlineHelpText>
        <label>Request Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponsePayload__c</fullName>
        <description>JSON representation of Response from External Service</description>
        <inlineHelpText>JSON representation of Response from External Service</inlineHelpText>
        <label>Response Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <description>Name of External Service</description>
        <inlineHelpText>Name of External Service</inlineHelpText>
        <label>Service Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceID__c</fullName>
        <description>Source Id</description>
        <inlineHelpText>Source Id</inlineHelpText>
        <label>Source ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Represents the status of the overall External Service transaction.</description>
        <inlineHelpText>Represents the status of the overall External Service transaction.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Request Sent</fullName>
                </value>
                <value>
                    <fullName>Response Received</fullName>
                </value>
                <value>
                    <fullName>Product Updated</fullName>
                </value>
                <value>
                    <fullName>Malformed Request</fullName>
                </value>
                <value>
                    <fullName>Error/Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestingUserID__c</fullName>
        <description>The ID of the User originating this request.</description>
        <inlineHelpText>The ID of the User originating this request.</inlineHelpText>
        <label>Requesting User ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <description>Encapsulate a transaction with an External Service.</description>
    <label>External Service</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>External Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Baydocs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RequestPayload__c</columns>
        <columns>ResponsePayload__c</columns>
        <columns>ServiceName__c</columns>
        <columns>SourceID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceName__c</field>
            <operation>equals</operation>
            <value>Baydocs</value>
        </filters>
        <label>Baydocs</label>
    </listViews>
    <listViews>
        <fullName>All_ExternalServices</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All External Services</label>
    </listViews>
    <listViews>
        <fullName>Amrock</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RequestPayload__c</columns>
        <columns>ResponsePayload__c</columns>
        <columns>ServiceName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceName__c</field>
            <operation>contains</operation>
            <value>Amrock</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/18/2018 12:00 AM</value>
        </filters>
        <label>Amrock</label>
    </listViews>
</CustomObject>